--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-sequelize-auth-boilerplate",
   "version": "1.0.0",
-  "description": "",
+  "description": "Project 2 Restaurant",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -22,7 +22,9 @@
     "mysql2": "^1.3.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "sequelize": "^4.3.1"
+    "sequelize": "^4.3.1",
+    "svg-injector": "^1.1.3",
+    "svg.js": "^2.6.6"
   },
   "devDependencies": {
     "chai": "^4.1.2",
@@ -32,5 +34,16 @@
     "eslint-plugin-prettier": "^2.6.2",
     "mocha": "^5.2.0",
     "prettier": "^1.13.7"
-  }
+  },
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/DjangoJuice/Project-2-Team-6.git"
+  },
+  "bugs": {
+    "url": "https://github.com/DjangoJuice/Project-2-Team-6/issues"
+  },
+  "homepage": "https://github.com/DjangoJuice/Project-2-Team-6#readme"
 }
